--- a/srv/src/main/resources/application.yaml
+++ b/srv/src/main/resources/application.yaml
@@ -3,8 +3,15 @@
 spring:
   config.activate.on-profile: default
   sql.init.schema-locations: classpath:schema-h2.sql
+  web.resources.static-locations: "file:./app"
 cds:
   data-source.auto-config.enabled: false
-  odata-v4:
-    endpoint:
-      path: "/api"
+  odata-v4.endpoint.path: "/api"
+  security.mock.users:
+    - name: admin
+      password: admin
+      roles:
+        -admin
+    - name: user
+      password: user
+
