--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -55,6 +55,7 @@
 				<version>${spring.boot.version}</version>
 				<configuration>
 					<skip>false</skip>
+					<workingDirectory>..</workingDirectory>
 				</configuration>
 				<executions>
 					<execution>
