--- a/.cdsrc.json
+++ b/.cdsrc.json
@@ -1,5 +1,11 @@
 {
-    "sql": {
-        "native_hana_associations" : false
+  "sql": {
+    "native_hana_associations": false
+  },
+  "requires": {
+    "[production]": {
+      "auth": "xsuaa",
+      "db": "hana"
     }
+  }
 }
