--- a/srv/src/main/resources/application.yaml
+++ b/srv/src/main/resources/application.yaml
@@ -1,17 +1,69 @@
+---
+logging:
+  level:
+    '[com.sap.cds.auditlog]': DEBUG
+
+cds:
+  odata-v4:
+    endpoint.path: "/api"
+
+---
+spring:
+  config.activate.on-profile: cloud
+
+---
+spring:
+  config.activate.on-profile: mocked
+
+cds:
+  messaging.services:
+    bupa-messaging:
+      kind: file-based-messaging
+
+---
+spring:
+  config.activate.on-profile: ft
+
+cds:
+  model.provider.url: http://localhost:4005
+  security.mock.users:
+    admin:
+      features:
+        - isbn
+        - discount
+    user:
+      features:
+        - isbn
+
+---
+spring:
+  config.activate.on-profile: local-mtxs
+
+cds:
+  multi-tenancy.sidecar.url: http://localhost:4005
+  security.mock.users:
+    admin:
+      tenant: t1
+    user:
+      tenant: t1
 
 ---
 spring:
   config.activate.on-profile: default
-  sql.init.schema-locations: classpath:schema-h2.sql
-  web.resources.static-locations: "file:./app"
-cds:
-  data-source.auto-config.enabled: false
-  odata-v4.endpoint.path: "/api"
-  security.mock.users:
-    - name: admin
-      password: admin
-      roles:
-        -admin
-    - name: user
-      password: user
+  sql.init.platform: h2
 
+cds:
+  data-source:
+    auto-config.enabled: false
+  security:
+    authentication.normalize-provider-tenant: true
+    mock.users:
+      admin:
+        password: admin
+        roles:
+          - admin
+        attributes:
+          businessPartner:
+            - "10401010"
+      user:
+        password: user
