--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>cds-feature-mt</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+			<version>1.18.30</version>
+		</dependency>
 	</dependencies>
 
 	<build>
