--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -84,21 +84,16 @@
 			<artifactId>scp-cf</artifactId>
 		</dependency>
 
-		<!-- dependencies to enable slf4j logging -->
 		<dependency>
 			<groupId>com.sap.hcp.cf.logging</groupId>
-			<artifactId>cf-java-logging-support-log4j2</artifactId>
+			<artifactId>cf-java-logging-support-logback</artifactId>
 			<version>3.8.4</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.20.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>2.20.0</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>1.5.16</version>
 		</dependency>
 	</dependencies>
 
